--- a/assets/css/normalize.css
+++ b/assets/css/normalize.css
@@ -347,3 +347,12 @@ template {
 [hidden] {
   display: none;
 }
+
+/* li, ul, a */
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
