--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,8 +10,6 @@ body {
     font-family: 'Roboto Condensed';
     font-size: 1.5rem;
     color: white;
-    background: url(../images/cityblur.jpg);
-    background-size: cover;
 }
 
 .main-container {
@@ -21,8 +19,9 @@ body {
     align-items: center;
     width: 100%;
     height: 100vh;
+    background: url(../images/cityblur.jpg);
+    background-size: cover;
 }
-
 /* header */
 
 .vl-t {
@@ -44,7 +43,7 @@ header {
 }
 
 .title {
-    padding: 0 65px 20px 65px;
+    padding-bottom: 25px;
     border-top: solid 2px white;
     border-bottom: solid 2px white;
     text-align: center;
@@ -52,11 +51,11 @@ header {
 }
 
 #name {
-    font-family: 'Press Start 2P', cursive;
+    text-transform: uppercase;
 }
 
 nav ul {
-    margin-left: 31px;
+    margin-left: 30px;
     display: flex;
     justify-content: center;
     border: solid 1px white;
@@ -68,7 +67,18 @@ nav ul li {
 }
 
 nav ul li a {
+    font-size: .92rem;
     color: white;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+}
+
+/* work */
+
+#work {
+    width: 85%;
+    height: 75%;
+    background-color: aqua;
 }
 
 /* skills */
