--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,16 +12,20 @@ body {
     color: white;
 }
 
-.main-container {
+#wrapper {
+    background: url(../images/cityblur.jpg);
+    background-size: cover;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    width: 100%;
     height: 100vh;
-    background: url(../images/cityblur.jpg);
-    background-size: cover;
+    width: 100%;
 }
+
+.main-container {
+    align-self: center;
+}
+
 /* header */
 
 .vl-t {
@@ -55,7 +59,7 @@ header {
 }
 
 nav ul {
-    margin-left: 30px;
+    margin-left: 28px;
     display: flex;
     justify-content: center;
     border: solid 1px white;
@@ -104,4 +108,10 @@ nav ul li a {
     width: 60%;
     height: 70%;
     background-color: lightgrey;
+}
+
+/* footer */
+
+#footer {
+    align-self: center;
 }
