--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,12 +26,26 @@ body {
     align-self: center;
 }
 
-/* active */
-
-.blur {
-    filter: blur(5px);
+article {
+    padding: 4.5rem 2.5rem 1.5rem 2.5rem;
+    width: 60rem;
+    max-width: 100%;
+    background-color: rgba(27, 31, 34, 0.85);
 }
 
+/* icons */
+
+
+/* active */
+
+.hide {
+    display: none;
+}
+
+.show {
+    display: flex;
+    justify-content: center;
+}
 
 /* header */
 
@@ -84,57 +98,30 @@ nav ul li a {
     letter-spacing: 3px;
 }
 
-/* Main div */
-
-#main {
-    display: flex;
-    justify-content: center;
-}
-
 /* work */
 
-#work {
-    padding: 4.5rem 2.5rem 1.5rem 2.5rem;
-    width: 60rem;
-    max-width: 100%;
-    background-color: rgba(27, 31, 34, 0.85);
-}
 
 /* skills */
 
-.tech-skills {
-    padding: 4.5rem 2.5rem 1.5rem 2.5rem;
-    width: 60rem;
-    max-width: 100%;
-    background-color: rgba(27, 31, 34, 0.85);
-}
-
-.tech-skills div {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.skill-icon {
-    width: 150px;
-    padding: 20px;
-}
 
 /* About */
 
-#about {
-    padding: 4.5rem 2.5rem 1.5rem 2.5rem;
-    width: 60rem;
-    max-width: 100%;
-    background-color: rgba(27, 31, 34, 0.85);
-}
 
 /* contact */
 
-#contact {
-    padding: 4.5rem 2.5rem 1.5rem 2.5rem;
-    width: 60rem;
-    max-width: 100%;
-    background-color: rgba(27, 31, 34, 0.85);
+.fields {
+}
+
+.field-half {
+}
+
+.field {
+}
+
+input {
+    background-color: transparent;
+    border-radius: 4px;
+    border: solid 1px #ffffff;
 }
 
 /* footer */
