--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,12 @@
 
 body {
     font-family: 'Roboto Condensed';
-    background: url(/assets/images/mountains.jpg) center center;
+    background: url(/assets/images/mountainsdarken.png) center center;
+
+/* parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
     background-size: cover;
     background-color: #1b1f22;
     color: white;
@@ -27,6 +32,7 @@ article {
 }
 
 h2 {
+    font-size: 3em;
     border-bottom: solid 2px white;
 }
 
@@ -39,7 +45,7 @@ h2 {
 }
 
 .main-container {
-    align-self: center;
+    margin-top: 100px;
 }
 
 /* icons */
@@ -60,13 +66,13 @@ h2 {
 
 .vl-t {
     border-left: 2px solid white;
-    height: 150px;
+    height: 100px;
     align-self: center;
 }
 
 .vl-b {
     border-left: 2px solid white;
-    height: 150px;
+    height: 100px;
     align-self: center;
 }
 
@@ -77,19 +83,23 @@ header {
 }
 
 .title {
-    padding: 20px 20px;
+    padding: 50px 30px;
     border-top: solid 2px white;
     border-bottom: solid 2px white;
     text-align: center;
-    letter-spacing: 7px;
-}
-
-#name {
+    letter-spacing: 10px;
     text-transform: uppercase;
 }
 
+.title p {
+    font-size: 1.3em;
+}
+
+#name {
+    font-size: 3em;
+}
+
 nav ul {
-    margin-left: 28px;
     display: flex;
     justify-content: center;
     border: solid 1px white;
@@ -97,12 +107,19 @@ nav ul {
 
 nav ul li {
     border: 1px solid white;
-    padding: 10px 25px;
+    height: 4rem;
+    width: 10rem;
+    padding-top: 20px;
+    text-align: center;
 }
 
 nav ul li a {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
     color: white;
     text-transform: uppercase;
+    font-size: 1.2em;
     letter-spacing: 3px;
 }
 
@@ -126,5 +143,6 @@ input {
 /* footer */
 
 #footer {
+    margin-top: 50px;
     align-self: center;
 }
