--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,6 +113,7 @@ header {
 h1 {
     font-family: 'Montserrat', sans-serif;
     font-size: 3em;
+    margin: 0 0 20px 0;
 }
 
 nav ul {
@@ -136,14 +137,14 @@ nav li:last-child {
 }
 
 nav a {
-    display: inline-block;
+    display: block;
     width: 100%;
     height: 100%;
-    padding-top: 20px;
     color: white;
     text-transform: uppercase;
     font-size: 1.2em;
     letter-spacing: 3px;
+    line-height: 3.4em;
 }
 
 a:hover {
@@ -183,17 +184,9 @@ input {
         font-size: 12px;
     }
 
-    #wrapper {
-        padding: 3rem 2rem;
-    }
-
     nav li {
         height: 3rem;
         width: 8rem;
-    }
-
-    nav a {
-        padding-top: 16px;
     }
 
 }
@@ -206,8 +199,22 @@ input {
     #wrapper {
         padding: 2rem 1rem;
     }
+
     #main article {
         padding: 3.5rem 2rem 0.5rem 2rem ;
+    }
+
+    nav li {
+        height: 2.7rem;
+        width: 7rem;
+    }
+
+    .vl-t {
+        height: 50px;
+    }
+    
+    .vl-b {
+        height: 50px;
     }
 
 }
@@ -218,7 +225,37 @@ input {
         padding: 1rem;
     }
 
+    .icon {
+        padding: 15px;
+    }
+
+    .icon img {
+        height: 40px;
+        width: 40px;
+    }
+
+    svg {
+        height: 75px;
+        width: 75px;
+    }
+
+    .title {
+        padding: 20px 15px;
+    }
+
     #main article {
         padding: 3rem 1.5rem 0.5rem 1.5rem ;
+    }
+
+    nav ul {
+        flex-direction: column;
+    }
+
+    nav li:first-child {
+        border-radius: 5px 5px 0 0;
+    }
+    
+    nav li:last-child {
+        border-radius: 0 0 5px 5px;
     }
 }
