--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,13 @@ body {
     background-size: cover;
     background-color: #1b1f22;
     color: white;
+    opacity: 0;
+    transition: none;
+}
+
+body.fade {
+    opacity: 1;
+    transition: 2s opacity;
 }
 
 
