--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
 
 body {
     font-family: 'Raleway', sans-serif;   
-    background: url(/assets/images/mountainsdarken.png) center center;
+    background: url(./assets/images/mountainsdarken.png) center center;
 
 /* parallax scrolling effect */
     background-attachment: fixed;
@@ -37,6 +37,10 @@ article {
     width: 40rem;
     max-width: 100%;
     background-color: rgba(27, 31, 34, 0.85);
+}
+
+article p {
+    line-height: 1.7rem;
 }
 
 h2 {
@@ -161,6 +165,30 @@ a:hover {
 
 /* work */
 
+.project-block p {
+    margin: 10px 0px;
+}
+
+a.button1 {
+    display: inline-block;
+    padding: 0.35em 1.2em;
+    border: 0.1em solid #FFFFFF;
+    margin: 0 0.3em 0.3em 0;
+    border-radius: 0.12em;
+    box-sizing: border-box;
+    text-decoration: none;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    color: #FFFFFF;
+    text-align: center;
+    transition: all 0.2s;
+}
+
+a.button1:hover {
+    color: #000000;
+    background-color: #FFFFFF;
+}
+
 
 /* skills */
 
@@ -173,7 +201,7 @@ a:hover {
 }
 
 h3 {
-    font-size: 2em;
+    font-size: 1.7em;
 }
 
 /* About */
