--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
 
 body {
     font-family: 'Raleway', sans-serif;   
-    /* background: url(/assets/images/desert.jpg) center center; */
+    background: url(../images/desert.jpg) center center;
 
 /* parallax scrolling effect */
     background-attachment: fixed;
@@ -34,7 +34,7 @@ svg {
 
 article {
     padding: 4.5rem 2.5rem 1.5rem 2.5rem;
-    width: 40rem;
+    width: 50rem;
     max-width: 100%;
     background-color: rgba(27, 31, 34, 0.85);
 }
@@ -53,7 +53,7 @@ h2 {
 }
 
 #wrapper {
-    background: url(../images/desert.jpg) center center;
+    /* background: url(../images/desert.jpg) center center; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -63,6 +63,14 @@ h2 {
 
 .main-container {
     margin-top: 30px;
+}
+
+.close {
+    position: relative;
+    float: right;
+    top: -3rem;
+    color: white;
+    font-size: 2rem;
 }
 
 /* icons */
@@ -214,6 +222,129 @@ input {
     background-color: transparent;
     border-radius: 4px;
     border: solid 1px #ffffff;
+    font-size: 1.2rem;
+    color: white;
+    padding: 11px;
+}
+
+/* Form */
+
+form {
+    margin: 0 0 2rem 0;
+}
+
+#contact p {
+    font-size: 1.4rem;
+    margin-bottom: 15px; 
+}
+
+form > ul > li > input:hover {
+    background:rgba(255, 255, 255, 0.075);;
+    opacity: 1;
+    cursor: pointer;
+}
+
+form > .fields {
+
+    display: flex;
+    flex-wrap: wrap;
+    width: calc(100% + 3rem);
+    margin: -1.5rem 0 2rem -1.5rem;
+}
+
+form > .fields > .field {
+    flex-shrink: 0;
+    padding: 1.5rem 0 0 1.5rem;
+    width: calc(100% - 1.5rem);
+}
+
+form > .fields > .field.half {
+    width: calc(50% - 0.75rem);
+}
+
+form > .fields > .field.third {
+    width: calc(100%/3 - 0.5rem);
+}
+
+form > .fields > .field.quarter {
+    width: calc(25% - 0.375rem);
+}
+
+@media screen and (max-width: 480px) {
+
+    form > .fields {
+        width: calc(100% + 3rem);
+        margin: -1.5rem 0 2rem -1.5rem;
+    }
+
+        form > .fields > .field {
+            padding: 1.5rem 0 0 1.5rem;
+            width: calc(100% - 1.5rem);
+        }
+
+            form > .fields > .field.half {
+                width: calc(100% - 1.5rem);
+            }
+
+            form > .fields > .field.third {
+                width: calc(100% - 1.5rem);
+            }
+
+            form > .fields > .field.quarter {
+                width: calc(100% - 1.5rem);
+            }
+
+}
+
+label {
+    color: #ffffff;
+    display: block;
+    font-size: 0.8rem;
+    font-weight: 300;
+    letter-spacing: 0.2rem;
+    line-height: 1.5;
+    margin: 0 0 1rem 0;
+    text-transform: uppercase;
+}
+
+input[type="text"],
+input[type="email"],
+textarea {
+    transition: border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out, background-color 0.2s ease-in-out;
+    background-color: transparent;
+    border-radius: 4px;
+    border: solid 1px #ffffff;
+    color: inherit;
+    display: block;
+    outline: 0;
+    padding: 0 1rem;
+    text-decoration: none;
+    width: 100%;
+}
+
+input[type="text"]:invalid,
+input[type="email"]:invalid,
+textarea:invalid {
+    box-shadow: none;
+}
+
+input[type="text"]:focus,
+input[type="email"]:focus,
+select:focus,
+textarea:focus {
+    background: rgba(255, 255, 255, 0.075);
+    border-color: #ffffff;
+    box-shadow: 0 0 0 1px #ffffff;
+}
+
+
+input[type="text"],
+input[type="email"] {
+    height: 2.75rem;
+}
+
+textarea {
+    padding: 0.75rem 1rem;
 }
 
 /* footer */
@@ -227,12 +358,8 @@ input {
 
 @media screen and (max-width: 1680px) {
 
-    body {
-        font-size: 12px;
-    }
-
     nav li {
-        height: 3rem;
+        height: 4rem;
         width: 8rem;
     }
 
@@ -240,7 +367,7 @@ input {
 
 @media screen and (max-width: 736px) {
     body {
-        font-size: 11px;
+        font-size: 14px;
     }
 
     #wrapper {
@@ -252,8 +379,8 @@ input {
     }
 
     nav li {
-        height: 2.7rem;
-        width: 7rem;
+        height: 3.4rem;
+        width: 7.5rem;
     }
 
     .vl-t {
