--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,6 +73,10 @@ h2 {
     font-size: 2rem;
 }
 
+.close:hover {
+    cursor: pointer;
+}
+
 /* icons */
 
 
@@ -203,10 +207,12 @@ a.button1:hover {
 
 .tech-icons {
     padding: 15px;
+    margin: 1em;
 }
 
-.tech-icons svg {
-    margin: 10px 10px;
+.tech-icons i {
+    font-size: 5em;
+    margin: 10px;
 }
 
 h3 {
