--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,13 +9,7 @@
 body {
     font-family: 'Raleway', sans-serif;   
     background: url(../images/desert.jpg) center center;
-
-/* parallax scrolling effect */
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-color: #1b1f22;
+    height: 100vh;
     color: white;
     opacity: 0;
     transition: none;
@@ -35,12 +29,17 @@ svg {
 article {
     padding: 4.5rem 2.5rem 1.5rem 2.5rem;
     width: 50rem;
-    max-width: 100%;
+    max-height: 90vh;
+    overflow: scroll;
     background-color: rgba(27, 31, 34, 0.85);
 }
 
 article p {
-    line-height: 1.7rem;
+    line-height: 1.5rem;
+}
+
+::-webkit-scrollbar { 
+    display: none; 
 }
 
 h2 {
@@ -53,7 +52,6 @@ h2 {
 }
 
 #wrapper {
-    /* background: url(../images/desert.jpg) center center; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -66,19 +64,22 @@ h2 {
 }
 
 .close {
-    position: relative;
     float: right;
-    top: -3rem;
-    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-size: 2rem;
+    transition: background-color 0.2s ease-in-out;
+    width: 3.5rem;
+    height: 3.5rem;
+    border-radius: 100%;
+    background-size: 20px 20px;
 }
 
 .close:hover {
+    background-color: rgba(255, 255, 255, 0.075);
     cursor: pointer;
 }
-
-/* icons */
-
 
 /* active */
 
@@ -178,17 +179,22 @@ a:hover {
 
 /* work */
 
-.project-block p {
+.project-block {
     margin: 10px 0px;
+    line-height: 1.5rem;
 }
+
+.project-block > * {
+    padding: .5rem;
+}
+
 
 a.button1 {
     display: inline-block;
     padding: 0.35em 1.2em;
     border: 0.1em solid #FFFFFF;
     margin: 0 0.3em 0.3em 0;
-    border-radius: 0.12em;
-    box-sizing: border-box;
+    border-radius: .2rem;
     text-decoration: none;
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
@@ -206,21 +212,19 @@ a.button1:hover {
 /* skills */
 
 .tech-icons {
-    padding: 15px;
-    margin: 1em;
+    text-align: center;
+    margin: 1rem 0;
 }
 
-.tech-icons i {
+i {
+    display: inline-block;
     font-size: 5em;
-    margin: 10px;
+    margin: 1rem;
 }
 
 h3 {
-    font-size: 1.7em;
+    font-size: 1.6em;
 }
-
-/* About */
-
 
 /* contact */
 
@@ -268,40 +272,6 @@ form > .fields > .field.half {
     width: calc(50% - 0.75rem);
 }
 
-form > .fields > .field.third {
-    width: calc(100%/3 - 0.5rem);
-}
-
-form > .fields > .field.quarter {
-    width: calc(25% - 0.375rem);
-}
-
-@media screen and (max-width: 480px) {
-
-    form > .fields {
-        width: calc(100% + 3rem);
-        margin: -1.5rem 0 2rem -1.5rem;
-    }
-
-        form > .fields > .field {
-            padding: 1.5rem 0 0 1.5rem;
-            width: calc(100% - 1.5rem);
-        }
-
-            form > .fields > .field.half {
-                width: calc(100% - 1.5rem);
-            }
-
-            form > .fields > .field.third {
-                width: calc(100% - 1.5rem);
-            }
-
-            form > .fields > .field.quarter {
-                width: calc(100% - 1.5rem);
-            }
-
-}
-
 label {
     color: #ffffff;
     display: block;
@@ -327,22 +297,6 @@ textarea {
     text-decoration: none;
     width: 100%;
 }
-
-input[type="text"]:invalid,
-input[type="email"]:invalid,
-textarea:invalid {
-    box-shadow: none;
-}
-
-input[type="text"]:focus,
-input[type="email"]:focus,
-select:focus,
-textarea:focus {
-    background: rgba(255, 255, 255, 0.075);
-    border-color: #ffffff;
-    box-shadow: 0 0 0 1px #ffffff;
-}
-
 
 input[type="text"],
 input[type="email"] {
@@ -437,5 +391,19 @@ textarea {
     
     nav li:last-child {
         border-radius: 0 0 5px 5px;
+    }
+
+    form > .fields {
+        width: calc(100% + 3rem);
+        margin: -1.5rem 0 2rem -1.5rem;
+    }
+
+    form > .fields > .field {
+        padding: 1.5rem 0 0 1.5rem;
+        width: calc(100% - 1.5rem);
+    }
+
+    form > .fields > .field.half {
+        width: calc(100% - 1.5rem);
     }
 }
