--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -179,8 +179,17 @@ a:hover {
 
 /* work */
 
+.work-img {
+    background-image: url(../images/work.jpg);
+    background-size: cover;
+    background-position: 150%;
+    height: 13rem;
+    width: 100%;
+    opacity: 0.7;
+}
+
 .project-block {
-    margin: 10px 0px;
+    margin: 1rem 0rem;
     line-height: 1.5rem;
 }
 
@@ -193,7 +202,7 @@ a.button1 {
     display: inline-block;
     padding: 0.35em 1.2em;
     border: 0.1em solid #FFFFFF;
-    margin: 0 0.3em 0.3em 0;
+    margin: 0.5em 0.5em 0.5em 0.5em;
     border-radius: .2rem;
     text-decoration: none;
     font-family: 'Roboto', sans-serif;
@@ -211,7 +220,16 @@ a.button1:hover {
 
 /* skills */
 
-.tech-icons {
+.skills-img {
+    background-image: url(../images/skills.jpg);
+    background-size: cover;
+    background-position: 150%;
+    height: 13rem;
+    width: 100%;
+    opacity: 0.7;
+}
+
+.tech-icons div {
     text-align: center;
     margin: 1rem 0;
 }
@@ -223,7 +241,24 @@ i {
 }
 
 h3 {
+    margin-top: 1.3rem;
     font-size: 1.6em;
+}
+
+/* About */
+
+.about-img {
+    background-image: url(../images/about.jpg);
+    background-size: cover;
+    background-position: bottom;
+    height: 13rem;
+    width: 100%;
+    margin-bottom: 1.2rem;
+    opacity: 0.7;
+}
+
+#about p {
+    margin: 1.2rem;
 }
 
 /* contact */
